@@ -1,3 +1,8 @@
+2009-08-23  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/40718
+	* gcc.target/i386/pr40718.c: New test.
+
 2009-08-16  Uros Bizjak  <ubizjak@gmail.com>
 
 	Backport from mainline:
